--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 openai
+genai
 google-generativeai
 httpx==0.24.1
 python-dotenv==1.0.0
