--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,11 @@ OPENAI_API_KEY=your_openai_api_key_here
 COMPREFACE_API_URL=http://localhost:8000
 COMPREFACE_API_KEY=your_compreface_api_key_here
 
+# OneHat External API Configuration
+ONEHAT_BASE_URL=http://65.2.35.118/one-hat/api/external
+ONEHAT_USERNAME=mukesh
+ONEHAT_PASSWORD=YWRtaW49
+ONEHAT_HOSPITAL_ID=445
+
 # Other API Keys
 GEMINI_API_KEY=your_gemini_api_key_here
