--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-openai
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.10.0
+pydantic-settings>=2.7.0
+openai>=1.50.0
 google-genai>=1.32.0
 tiktoken>=0.5.0
 regex>=2022.1.18
-httpx==0.24.1
-python-dotenv==1.0.0
-python-multipart==0.0.6
-urllib3==1.26.18
-requests-toolbelt==0.9.1
-supabase==1.0.4
+httpx>=0.27.0
+python-dotenv>=1.0.0
+python-multipart>=0.0.6
+urllib3>=1.26.18
+requests-toolbelt>=0.9.1
+supabase>=1.0.4
