--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,8 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
-# CompreFace Configuration
-COMPREFACE_API_URL=http://localhost:8000
-COMPREFACE_API_KEY=your_compreface_api_key_here
+# Luxand Face Recognition Configuration
+LUXAND_API_KEY=your_luxand_api_key_here
 
 # OneHat External API Configuration
 ONEHAT_BASE_URL=http://65.2.35.118/one-hat/api/external
